--- a/app/src/main/res/layout/list_izin_daerah.xml
+++ b/app/src/main/res/layout/list_izin_daerah.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="@dimen/activity_horizontal_margin"
     android:id="@+id/list_daerah"
@@ -10,7 +10,8 @@
         android:id="@+id/nama_izin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/colorPrimaryDark"
+        android:background="@color/middleblue"
+        android:textColor="@android:color/white"
         android:textStyle="bold"
         android:textSize="10dp"/>
 
