--- a/app/src/main/res/layout/layout_perizinan.xml
+++ b/app/src/main/res/layout/layout_perizinan.xml
@@ -17,8 +17,7 @@
             android:textAlignment="center"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:src="@drawable/prosedur1"
-            />
+            android:src="@drawable/prosedur1" />
 
         <TextView
             android:id="@+id/textView7"
@@ -30,29 +29,37 @@
             android:textSize="20sp" />
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/btn_nasional"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:gravity="left"
-        android:layout_weight="2"
-        android:text="@string/izin_nasional"
-        android:textStyle="bold"/>
+                <TextView
+                    android:id="@+id/btn_nasional"
+                    android:layout_width="0dp"
+                    android:layout_height="50dp"
+                    android:layout_weight="2"
+                    android:gravity="left"
+                    android:background="@color/middleblue"
+                    android:text="Izin Tingkat\nNasional"
+                    android:textColor="@android:color/white"
+                    android:textSize="15dp"
+                    android:textAlignment="center"
+                    />
 
-    <Button
-        android:id="@+id/btn_daerah"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:gravity="right"
-        android:layout_weight="2"
-        android:text="@string/izin_daerah"
-        android:textStyle="bold"/>
-    </LinearLayout>
+                <TextView
+                    android:id="@+id/btn_daerah"
+                    android:layout_width="0dp"
+                    android:layout_height="50dp"
+                    android:layout_weight="2"
+                    android:gravity="right"
+                    android:background="@color/middleblue"
+                    android:text="Izin Tingkat\nDaerah"
+                    android:textColor="@android:color/white"
+                    android:textSize="15dp"
+                    android:textAlignment="center"/>
+
+            </LinearLayout>
 
     <FrameLayout
         android:id="@+id/fIzin"
