--- a/app/src/main/res/layout/list_perizinan_nasional.xml
+++ b/app/src/main/res/layout/list_perizinan_nasional.xml
@@ -2,20 +2,28 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingTop="5dp">
 
     <Button
         android:id="@+id/izin_3_jam"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/izin_3_jam"
-        android:textSize="15dp"/>
+        android:textSize="10dp"
+        android:textStyle="bold"
+        android:textColor="@android:color/white"
+        android:background="@color/middleblue"/>
 
     <Button
         android:id="@+id/izin_esdm"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/izin_esdm"
-        android:textSize="15dp"/>
+        android:textSize="10dp"
+        android:textStyle="bold"
+        android:textColor="@android:color/white"
+        android:background="@color/middleblue"
+        android:layout_marginTop="10dp"/>
 
 </LinearLayout>
